# knok-demo

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
src/: app.rs  backend.rs  field_ops.rs  main.rs  ndarray_runner.rs  presets.rs  render.rs  runner.rs  state.rs  types.rs
