[package]
name = "knok-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
knok = { path = "../knok/crates/knok" }

[build-dependencies]
knok-build = { path = "../knok/crates/knok-build" }

[features]
default = []
vulkan = ["knok/vulkan", "knok-build/vulkan"]
cuda = ["knok/cuda", "knok-build/cuda"]

[workspace]
